--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.11.3",
+		"@emotion/styled": "^11.11.0",
+		"@mui/icons-material": "^5.15.9",
+		"@mui/material": "^5.15.9",
+		"@mui/utils": "^5.15.9",
+		"mobx": "^6.12.0",
+		"mobx-react-lite": "^4.0.5",
 		"next": "14.1.0",
 		"react": "^18",
 		"react-dom": "^18"
