--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,17 @@
 {
-	"extends": ["next/core-web-vitals", "plugin:thng/prettier"]
+	"extends": ["next/core-web-vitals", "plugin:prettier/recommended"],
+	"rules": {
+		"prettier/prettier": [
+			"warn",
+			{
+				"printWidth": 80,
+				"tabWidth": 4,
+				"useTabs": true,
+				"semi": false,
+				"singleQuote": true,
+				"jsxSingleQuote": true,
+				"endOfLine": "crlf"
+			}
+		]
+	}
 }
