--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
 		"@types/react-dom": "^18",
 		"eslint": "^8",
 		"eslint-config-next": "14.1.0",
-		"eslint-plugin-thng": "^1.0.7",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"prettier": "^3.2.5",
 		"typescript": "^5"
 	}
 }
